--- a/Pages/Sponsor.razor
+++ b/Pages/Sponsor.razor
@@ -1,4 +1,6 @@
-﻿<header class="sponsors_header header">
+﻿@page "/Sponsor"
+
+<header class="sponsors_header header">
     <div class="header_content">
         <h2 class="heading">SPONSORS</h2>
     </div>
@@ -11,7 +13,7 @@
         <h2 class="container_header container_main_header center">MAIN SPONSOR</h2>
         <div class="image_container">
             <a href="https://everesthomes.ca/" target="_blank">
-                <img src="http://www.nccricketclub.org/Images/sponsors/main-sponsor-2020.jpg" alt="EVEREST" />
+                <img src="/Static/Images/sponsors/main-sponsor-2020.jpg" alt="EVEREST" />
             </a>
         </div>
         <h2 class="center">Everest Realty Brokerage Ltd.</h2>
@@ -27,7 +29,7 @@
         <h2 class="container_header center">SECOND SPONSOR</h2>
         <div class="image_container">
             <a href="https://ca.linkedin.com/in/atulsubedi" target="_blank">
-                <img src="http://www.nccricketclub.org/Images/sponsors/second-sponsor-atul-1600x206-compressor.jpg" alt="ATUL SUBEDI" />
+                <img src="/Static/Images/sponsors/second-sponsor-atul-1600x206-compressor.jpg" alt="ATUL SUBEDI" />
             </a>
         </div>
         <h2 class="center">Atul Subedi and Associates</h2>
@@ -44,7 +46,7 @@
         <h2 class="container_header center">THIRD SPONSOR</h2>
         <div class="image_container">
             <a href="https://worlddrivedentistry.com/" target="_blank">
-                <img src="http://www.nccricketclub.org/Images/sponsors/third-sponsor-compressor.jpg" alt="WORLD DRIVE DENTISTRY" />
+                <img src="/Static/Images/sponsors/third-sponsor-compressor.jpg" alt="WORLD DRIVE DENTISTRY" />
             </a>
         </div>
         <h2 class="center">World Drive Dentistry</h2>
@@ -59,9 +61,9 @@
     <div class="wrapper container">
         <h2 class="container_header center">FORTH SPONSOR</h2>
         <div class="image_container">
-            <a href="#">
-                <img src="http://www.nccricketclub.org/Images/sponsors/fourth-sponsor.jpg" alt="FORTH SPONSOR" />
-            </a>
+            
+                <img src="/Static/Images/sponsors/fourth-sponsor.jpg" alt="FORTH SPONSOR" />
+            
         </div>
         <h2 class="center">Aura Physio Clinic</h2>
         <p>Certified Clinical Experts of Physiotherapy - Massage Therapy - Chiropractic - Acupuncture - Orthotics - Braces & Stocking.</p>
@@ -104,9 +106,9 @@
     <div class="wrapper container">
         <h2 class="container_header center">FACILITY AND MEDIA PARTNER</h2>
         <div class="image_container">
-            <a href="#">
-                <img src="http://www.nccricketclub.org/Images/sponsors/facility-partner-compressor.jpg" alt="FACILITY AND MEDIA PARTNER" />
-            </a>
+            
+                <img src="/Static/Images/sponsors/facility-partner-compressor.jpg" alt="FACILITY AND MEDIA PARTNER" />
+            
         </div>
         <h2 class="center">Brampton Sport Center</h2>
         <p>
