--- a/Shared/Footer.razor
+++ b/Shared/Footer.razor
@@ -1,21 +1,21 @@
 ﻿<footer>
     <div class="footer_content wrapper">
         <div>
-            <a href="home.aspx">
-                <img src="http://www.nccricketclub.org/Images/logos/nccc-logo-200x155.png" alt="sc" class="footer_logo" />
+            <a href="/">
+                <img src="/Static/Images/Logos/nccc-logo-200x155.png" alt="sc" class="footer_logo" />
             </a><br />
             <a href="https://www.facebook.com/nccricketclub/" target="_blank"><i class='social_icon fab fa-facebook-square'></i></a>
             <a href="https://www.youtube.com/channel/UCzpUB3zYs8BbFiIBs5cIl5w/videos" target="_blank"><i class='social_icon fab fa-youtube'></i></a>
         </div>
         <div>
             <ul>
-                <li><a href="membership.aspx">MEMBERSHIP</a></li>
-                <li><a href="FetchData">SPONSORS</a></li>
-                <li><a href="players.aspx">PLAYERS</a></li>
-                <li><a href="board.aspx">BOARD</a></li>
-                <li><a href="aboutUs.aspx">ABOUT US</a></li>
+                <li><a href="Membership">MEMBERSHIP</a></li>
+                <li><a href="Sponsor">SPONSORS</a></li>
+                <li><a href="Players">PLAYERS</a></li>
+                <li><a href="Board">BOARD</a></li>
+                <li><a href="AboutUs">ABOUT US</a></li>
                 <li>contact@nccricketclub.org</li>
-                <li>2020 Nepalese Canadian Cricket Club</li>
+                <li>Copyright &copy; 2021 Nepalese Canadian Cricket Club</li>
             </ul>
         </div>
     </div>
