--- a/App.razor
+++ b/App.razor
@@ -5,7 +5,11 @@
     </Found>
     <NotFound>
         <LayoutView Layout="@typeof(MainLayout)">
-            <p>Sorry, there's nothing at this address.</p>
+            <header class="players_header header">
+                <div class="header_content">
+                    <h1 class="heading">Oops!!! You came to wrong address.</h1>
+                </div>
+            </header>
         </LayoutView>
     </NotFound>
 </Router>
