--- a/Pages/Membership.razor
+++ b/Pages/Membership.razor
@@ -1,4 +1,5 @@
 ﻿@page "/Membership"
+@using NCCC_Blazor.Data
 
 <header class="membership_header header">
     <div class="header_content">
@@ -12,6 +13,44 @@
         <h2 class="sub_heading">General Membership -- $25.00</h2>
     </div>
     <br /><br /><br />
+    @*<EditForm Model="MemberForm" OnValidSubmit="@SubmitData">
+        <div class="container">
+            <DataAnnotationsValidator />
+            <div class="form-group">
+                <label for="name">Name:</label>
+                <InputText id="name" @bind-Value="@MemberForm.FullName" />
+                &nbsp; <ValidationMessage For="@(() => MemberForm.FullName)" />
+            </div>
+            <div class="form-group">
+                <label for="city">City:</label>
+                <InputText id="city" @bind-Value="@MemberForm.City" />
+                &nbsp; <ValidationMessage For="@(() => MemberForm.City)" />
+            </div>
+            <div class="form-group">
+                <label for="province">Province:</label>
+                <InputText id="province" @bind-Value="@MemberForm.Province" />
+                &nbsp; <ValidationMessage For="@(() => MemberForm.Province)" />
+            </div>
+            <div class="form-group">
+                <label for="country">Country:</label>
+                <InputText id="country" @bind-Value="@MemberForm.Country" />
+                &nbsp; <ValidationMessage For="@(() => MemberForm.Country)" />
+            </div>
+            <div class="form-group">
+                <label for="phoneNumber">Phone Number:</label>
+                <InputText id="phoneNumber" @bind-Value="@MemberForm.PhoneNumber" />
+                &nbsp; <ValidationMessage For="@(() => MemberForm.PhoneNumber)" />
+            </div>
+            <div class="form-group">
+                <label for="emailAddress">EmailAddress:</label>
+                <InputText id="emailAddress" @bind-Value="@MemberForm.EmailAddress" />
+                &nbsp; <ValidationMessage For="@(() => MemberForm.EmailAddress)" />
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Save" />
+            </div>
+        </div>
+    </EditForm>*@
     <div class="wrapper gallery_container gallery_container_small">
         <div class="box center no_wrap">
             <h2>Player Membership</h2>
@@ -31,4 +70,11 @@
 </section>
 
 
-@code { }
+@code {
+    public MemberModel MemberForm = new MemberModel();
+
+    private void SubmitData()
+    {
+
+    }
+}
