--- a/Pages/_Host.cshtml
+++ b/Pages/_Host.cshtml
@@ -12,14 +12,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>NCCC-Blazor</title>
     <base href="~/" />
-    @*<link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
-    <link href="css/site.css" rel="stylesheet" />*@
-
+    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
+    @*<link href="css/site.css" rel="stylesheet" />*@
+    @*<link rel="stylesheet" href="/css/all.min.css">*@
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/StyleSheet.css" />
-    <script src='https://kit.fontawesome.com/a076d05399.js'></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script type="text/javascript" src="../papaparse.min.js"></script>
+    
 </head>
 <body>
     <app>
@@ -38,6 +36,12 @@
     </div>
 
     <script src="_framework/blazor.server.js"></script>
+
+    <script src='/JS/all.min.js'></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="JS/Tilt.js"></script>
     <script src="JS/JavaScript.js"></script>
+
+    <script type="text/javascript" src="/JS/papaparse.min.js"></script>
 </body>
 </html>
