--- a/wwwroot/css/StyleSheet.css
+++ b/wwwroot/css/StyleSheet.css
@@ -7,6 +7,19 @@ html, body {
     font-family: 'Titillium Web', sans-serif;
     overflow-x: hidden;
     scroll-behavior: smooth;
+    /* Adjust font size */
+    font-size: 100%;
+    -webkit-text-size-adjust: 100%;
+    /* Font varient */
+    font-variant-ligatures: none;
+    -webkit-font-variant-ligatures: none;
+    /* Smoothing */
+    text-rendering: optimizeLegibility;
+    -moz-osx-font-smoothing: grayscale;
+    font-smoothing: antialiased;
+    font-smooth: always;
+    -webkit-font-smoothing: antialiased;
+    text-shadow: rgba(0, 0, 0, .01) 0 0 1px;
 }
 
 /* This class will align the text at center */
@@ -67,19 +80,24 @@ nav {
 .nav_links {
     overflow: hidden;
     display: flex;
-    justify-content: space_between;
-    width: 80%;
+    justify-content: space-between;
+    width: 100%;
 }
 
     .nav_links li, .drop_button {
         list-style-type: none;
         font-size: 15px;
-        width: 140px;
+        margin: 0 15px;
+        max-width: 270px;
+        white-space: nowrap;
         font-weight: bold;
         text-transform: uppercase;
         cursor: pointer;
         color: #000;
         transition: all 300ms ease;
+    }
+    .nav_links li:hover, .drop_button:hover{
+        text-shadow: 0 0 1px #333;
     }
 
 .dropdown {
@@ -88,6 +106,7 @@ nav {
 
 .dropdown, .drop_button {
     border: none;
+    margin: 0;
     background: transparent;
     outline: transparent;
     font-family: 'Titillium Web', sans-serif;
@@ -101,10 +120,16 @@ nav {
 
 .dropdown_content {
     position: absolute;
-    display: none;
+    opacity: 0;
     width: 150px;
     background: #ffffff;
     border-radius: 5px;
+    transition: 300ms ease-in-out;
+    overflow: hidden;
+    height: 0;
+    margin-top: 10px;
+    white-space: nowrap;
+    text-shadow: none;
 }
 
 .nav_links li .dropdown .dropdown_content a {
@@ -122,7 +147,6 @@ nav {
     .nav_links li .dropdown .dropdown_content a:nth-child(even) {
         background-color: #f9f9f9;
     }
-
     .nav_links li .dropdown .dropdown_content a:hover {
         background-color: rgba(1,1,100,0.1);
     }
@@ -163,7 +187,7 @@ nav {
 
 @media screen and (max-width: 850px) {
     .wrapper {
-        max-width: 100%;
+        max-width: 90%;
     }
 
     nav {
@@ -186,7 +210,7 @@ nav {
     .nav_links {
         position: absolute;
         right: -5px;
-        height: 150vh;
+        height: calc(100vh - 70px);
         z-index: 1;
         top: 50px;
         display: flex;
@@ -205,12 +229,12 @@ nav {
             text-align: left;
             margin: 5px 40px;
             font-weight: 600;
-            font-size: 18px;
+            font-size: 15px;
         }
 
     .dropdown_content {
         position: relative;
-        margin-left: 50px;
+        margin-left: 30px;
     }
 
     .nav_links li .dropdown .dropdown_content a {
@@ -238,7 +262,8 @@ nav {
     }
 
     .mobile_logo {
-        width: 100%;
+        width: 90%;
+        max-width: 130px;
         text-align: center;
     }
 }
@@ -282,6 +307,64 @@ nav {
 .toggle .burger3 {
     transform: rotate(45deg) translate(-5px,-6px);
 }
+@keyframes fade {
+    0% {
+        opacity: 0;
+        height: 0;
+    }
+
+    100% {
+        opacity: 1;
+        height: inherit;
+    }
+}
+
+@keyframes slide {
+    0% {
+        margin-top: -20px;
+    }
+
+    100% {
+        margin-top: 10px;
+    }
+}
+
+@keyframes fade_reverse {
+    0% {
+        opacity: 1;
+        height: inherit;
+    }
+
+    100% {
+        opacity: 0;
+        height: 0;
+    }
+}
+
+@keyframes slide_reverse {
+    0% {
+        margin-top: 10px;
+    }
+
+    100% {
+        margin-top: -20px;
+    }
+}
+
+.fade {
+    animation-name: fade, slide;
+    animation-duration: 200ms, 500ms;
+    animation-fill-mode: forwards;
+    animation-timing-function: linear, cubic-bezier(0.23, 1, 0.32, 1);
+    animation-delay: 200ms, 0;
+}
+
+.fade_reverse {
+    animation-name: fade_reverse, slide_reverse;
+    animation-duration: 100ms, 200ms;
+    animation-timing-function: linear, cubic-bezier(0.23, 1, 0.32, 1);
+    animation-delay: 100ms, 0;
+}
 
 /*Navigation Bar End*/
 
@@ -305,32 +388,32 @@ header {
 }
 
 .homepage_header {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../Images/slider/slider-players.jpg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("/Static/Images/slider/slider1-1600x600.jpg");
     height: 550px;
 }
 
 .membership_header {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("http://www.nccricketclub.org/Images/slider/slider-aboutus.jpg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("/Static/Images/slider/slider-aboutus.jpg");
 }
 
 .players_header {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("http://www.nccricketclub.org/Images/slider/slider-players.jpg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("/Static/Images/slider/slider-players.jpg");
 }
 
 .playerProfile_header {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("http://www.nccricketclub.org/Images/slider/slider-aboutus.jpg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("/Static/Images/slider/slider1-1600x600.jpg");
 }
 
 .board_header {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("http://www.nccricketclub.org/Images/slider/slider-board.jpg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("/Static/Images/slider/slider-board.jpg");
 }
 
 .sponsors_header {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("http://www.nccricketclub.org/Images/slider/slider-sponsor.jpg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("/Static/Images/slider/slider-sponsor.jpg");
 }
 
 .aboutUs_header {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("http://www.nccricketclub.org/Images/slider/slider-aboutus.jpg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("/Static/Images/slider/slider-aboutus.jpg");
 }
 
 .header_content {
@@ -446,7 +529,6 @@ section {
 .player_container {
     width: 100%;
     overflow-x: scroll;
-    transition: 300ms ease-in-out;
 }
 
 .slider_control_left, .slider_control_right {
@@ -454,6 +536,8 @@ section {
     font-size: 100px;
     color: rgba(0, 0, 0, 0.3);
     z-index: 1;
+    border-radius: 10px;
+    cursor: grab;
 }
 
 .slider_control_left {
@@ -470,6 +554,7 @@ section {
 
     .slider_control_left:hover, .slider_control_right:hover {
         color: rgba(0,0,0,0.8);
+        background: rgba(0,0,0,0.4);
     }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
@@ -484,26 +569,33 @@ section {
 /* -- For Player's Profile -- */
 .profile_container {
     position: relative;
-    display: inline-flex;
+    /*display: inline-flex;*/
     justify-content: center;
     align-items: center;
     max-width: 400px;
-    width: 95%;
+    width: 100%;
     min-width: 250px;
     min-height: 280px;
-    height: 95%;
-    margin: 10px;
+    height: 100%;
     border-radius: 10px;
     background: transparent;
 }
 
     .profile_container a img {
-        filter: brightness(70%) contrast(110%);
+        filter: brightness(80%) contrast(110%);
         border-radius: 10px;
         bottom: 0;
         background: transparent;
         vertical-align: middle;
+        max-width: 100%;
+        width: 100vw;
+        height: auto;
     }
+
+.tilt {
+    transform-style: preserve-3d;
+}
+
 
 .profile_info_container {
     /*display: grid;
@@ -530,8 +622,9 @@ section {
         transition: 300ms ease-in-out;
     }
     .profile_info_container div:nth-child(1):hover img {
-        border-radius: 50%;
-        filter: grayscale(100%) brightness(1.1);
+        filter: contrast(110%);
+        transform: scale(0.9);
+        box-shadow: 0px 10px 20px #000;
     }
 
     .profile_info_container .player_information {
@@ -548,6 +641,7 @@ section {
     text-align: left;
     color: #fff;
     padding-left: 10%;
+    transition: 300ms ease-in-out;
 }
 
     .player_info h2 {
@@ -619,7 +713,7 @@ section {
 /* Gallery Container */
 .gallery_container {
     display: grid;
-    grid-gap: 5px;
+    grid-gap: 20px;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     grid-auto-flow: dense;
     justify-items: center;
@@ -635,7 +729,7 @@ section {
     grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
 }
 
-.players_gallery .profile_container, .players_gallery .profile_container h2, .players_gallery .player_container p {
+.players_gallery .profile_container h2, .players_gallery .player_container p {
     transition: 300ms ease-in-out;
 }
 
@@ -644,23 +738,16 @@ section {
 }
 
     .players_gallery .profile_container:hover {
-        box-shadow: 0px 0px 20px #000;
-        filter: brightness(1.3) contrast(120%);
-        transform: scale(1.05) rotate(5deg);
+        box-shadow: 0px 5px 20px #000;
+        filter: brightness(1.1) contrast(120%);
     }
 
-        .players_gallery .profile_container:hover h2, .players_gallery .profile_container:hover p {
+
+        .players_gallery .profile_container:hover .player_info {
             text-shadow: 5px 5px 10px #000;
             transform: scale(1.2);
         }
 
-        .players_gallery .profile_container:hover h2 {
-            margin-left: 50px;
-        }
-
-        .players_gallery .profile_container:hover p {
-            margin-left: 15px;
-        }
 
 @media screen and (max-width: 850px) {
     .gallery_container h2 {
@@ -675,12 +762,13 @@ section {
 /* -- Board -- */
 .board_profile_container {
     box-shadow: 4px 6px 15px 4px rgba(0,0,0,0.2);
-    transition: 350ms ease-in-out;
     border-radius: 10px;
     max-width: 350px;
     width: 100%;
     min-width: 250px;
     margin: 10px 20px;
+    cursor: pointer;
+    transition: 300ms ease-in-out;
 }
 
     .board_profile_container img {
@@ -689,7 +777,7 @@ section {
 
     .board_profile_container:hover {
         box-shadow: 8px 12px 30px 8px rgba(0,0,0,0.4);
-        transform: scale(0.96);
+        transform: translateY(-20px) translateZ(-200px);
     }
 
 .member_information {
@@ -893,7 +981,7 @@ footer .footer_content .footer_logo {
 }
 
 
-/* For Removing the UI Error of Blazor*/
+/* For Removing the UI Error of Blazor (An UnHandled exception)*/
 #blazor-error-ui {
     background: lightyellow;
     bottom: 0;
