--- a/Pages/Membership.razor
+++ b/Pages/Membership.razor
@@ -1,6 +1,8 @@
 ﻿@page "/Membership"
 @using NCCC_Blazor.Data
 
+@inject MemberShipHelper _memService
+
 <header class="membership_header header">
     <div class="header_content">
         <h2 class="heading">MEMBERSHIP</h2>
@@ -13,44 +15,40 @@
         <h2 class="sub_heading">General Membership -- $25.00</h2>
     </div>
     <br /><br /><br />
-    @*<EditForm Model="MemberForm" OnValidSubmit="@SubmitData">
-        <div class="container">
-            <DataAnnotationsValidator />
-            <div class="form-group">
-                <label for="name">Name:</label>
-                <InputText id="name" @bind-Value="@MemberForm.FullName" />
-                &nbsp; <ValidationMessage For="@(() => MemberForm.FullName)" />
-            </div>
-            <div class="form-group">
-                <label for="city">City:</label>
-                <InputText id="city" @bind-Value="@MemberForm.City" />
-                &nbsp; <ValidationMessage For="@(() => MemberForm.City)" />
-            </div>
-            <div class="form-group">
-                <label for="province">Province:</label>
-                <InputText id="province" @bind-Value="@MemberForm.Province" />
-                &nbsp; <ValidationMessage For="@(() => MemberForm.Province)" />
-            </div>
-            <div class="form-group">
-                <label for="country">Country:</label>
-                <InputText id="country" @bind-Value="@MemberForm.Country" />
-                &nbsp; <ValidationMessage For="@(() => MemberForm.Country)" />
-            </div>
-            <div class="form-group">
-                <label for="phoneNumber">Phone Number:</label>
-                <InputText id="phoneNumber" @bind-Value="@MemberForm.PhoneNumber" />
-                &nbsp; <ValidationMessage For="@(() => MemberForm.PhoneNumber)" />
-            </div>
-            <div class="form-group">
-                <label for="emailAddress">EmailAddress:</label>
-                <InputText id="emailAddress" @bind-Value="@MemberForm.EmailAddress" />
-                &nbsp; <ValidationMessage For="@(() => MemberForm.EmailAddress)" />
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" />
-            </div>
+
+    <div class="area3Content area1Content">
+        Full Name* :<input type="text" id="fullname" placeholder="FullName" value="" /><br />
+        Email Address*:<input type="text" id="email" placeholder="abc@abc.com" /><br />
+        Phone Number*:<input type="text" id="phone" placeholder="8888888888" /><br />
+        Address:<input type="text" id="address" placeholder="123 Home Address" /><br />
+        Message:<textarea type="text" rows="4" maxlength="200" id="message" placeholder="Type you Message"></textarea><br />
+        <div id="membershipTypeBlock">
+            Membership Type: <select id="membershipType">
+                <option></option>
+                <option value="player">Player Membership</option>
+                <option value="general">General Membership</option>
+            </select>
         </div>
-    </EditForm>*@
+        <input type="checkbox" id="paid" name="paid" value="false" /> <span>I've already paid the fees.</span>
+        <p class="disabled" id="paymentMethodLabel">Please specify your payment method:</p>
+        <input class="disabled" id="paymentMethod" type="text" name="paymentMethod" placeholder="eg:(PayPal, e-Transfer, Cash, ...)" disabled />
+
+        <input class="disabled button" type="submit" name="submit" value="Submit" id="submitBtn" />
+        <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank" id="playerMembership" style="display:none">
+            <input type="hidden" name="cmd" value="_s-xclick">
+            <input type="hidden" name="hosted_button_id" value="Z3J4KTXJ87W8N">
+            <input class="disabled button" type="submit" value="Pay Now" src="https://www.paypalobjects.com/en_US/i/btn/btn_paynowCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!" id="playerSubmitMembership">
+            <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+        </form>
+        <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank" id="generalMembership" style="display:none">
+            <input type="hidden" name="cmd" value="_s-xclick">
+            <input type="hidden" name="hosted_button_id" value="DDJJLNUMQWZUQ">
+            <input class="disabled button" type="submit" value="Pay Now" src="https://www.paypalobjects.com/en_US/i/btn/btn_paynowCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!" id="generalSubmitMembership">
+            <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+        </form>
+    </div>
+    <br />
+
     <div class="wrapper gallery_container gallery_container_small">
         <div class="box center no_wrap">
             <h2>Player Membership</h2>
@@ -69,12 +67,3 @@
     </div>
 </section>
 
-
-@code {
-    public MemberModel MemberForm = new MemberModel();
-
-    private void SubmitData()
-    {
-
-    }
-}
