--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -15,23 +15,24 @@
                 <li>
                     <a href="Membership">MEMBERSHIP</a>
                 </li>
-                <li>
-                    <div class="dropdown">
-                        <button class="drop_button" type="button">TEAM <span class="drop_icon fas fa-caret-up"></span></button>
-                        <div class="dropdown_content">
-                            <a href="Players">PLAYER</a>
-                            <a href="PlayerProfile">Player Profile</a>
+                @* --- Uncomment the below <li>...</li> block if a dropdown is needed --- *@
+                @*<li>
+                        <div class="dropdown">
+                            <button class="drop_button" type="button">TEAM <span class="drop_icon fas fa-caret-up"></span></button>
+                            <div class="dropdown_content">
+                                <a href="Players">PLAYER</a>
+                                <a href="PlayerProfile">Player Profile</a>
+                            </div>
                         </div>
-                    </div>
+                    </li>*@
+                <li>
+                    <a href="Sponsor">SPONSORS</a>
                 </li>
                 <li>
-                    <div class="dropdown">
-                        <button class="drop_button" type="button">Club <span class="drop_icon fas fa-caret-up"></span></button>
-                        <div class="dropdown_content">
-                            <a href="Board">BOARD</a>
-                            <a href="Sponsor">SPONSORS</a>
-                        </div>
-                    </div>
+                    <a href="Players">Player</a>
+                </li>
+                <li>
+                    <a href="Board">BOARD</a>
                 </li>
                 <li>
                     <a href="AboutUs" id="contactLink">About Us</a>
