--- a/wwwroot/css/StyleSheet.css
+++ b/wwwroot/css/StyleSheet.css
@@ -46,6 +46,25 @@ html, body {
 .enabled{
     opacity: 1;
 }
+/* Custom Scroll Bar */
+::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+}
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey; 
+  border-radius: 10px;
+}
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: linear-gradient(#2193b0, #6dd5ed); 
+  border-radius: 10px;
+}
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #6dd5ed;
+}
 
 /* -------------------------
 ------------------------------
@@ -509,6 +528,9 @@ section {
     width: 100%;
     margin: 10px 0;
 }
+.image_container .profile_container{
+    margin: auto 5px;
+}
 
 .player_container .image_container {
     max-width: 2000px;
@@ -576,7 +598,6 @@ section {
 /* -- For Player's Profile -- */
 .profile_container {
     position: relative;
-    /*display: inline-flex;*/
     justify-content: center;
     align-items: center;
     max-width: 400px;
@@ -586,9 +607,10 @@ section {
     height: 100%;
     border-radius: 10px;
     background: transparent;
+    cursor: pointer;
 }
 
-    .profile_container a img {
+    .profile_container div img {
         filter: brightness(80%) contrast(110%);
         border-radius: 10px;
         bottom: 0;
@@ -623,7 +645,7 @@ section {
 
     .profile_info_container img {
         max-width: 400px;
-        width: 100vw;
+        width: 100%;
         min-width: 250px;
         margin: 10px;
         transition: 300ms ease-in-out;
@@ -637,7 +659,7 @@ section {
     .profile_info_container .player_information {
         max-width: 400px;
         width: 100vw;
-        min-width: 300px;
+        min-width: 250px;
         padding: 25px;
     }
 
@@ -756,7 +778,158 @@ section {
         }
 
 
+.popUp {
+    display: block;
+    position: fixed;
+    top: 45px;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    max-width: 95%;
+    width: 1200px;
+    max-height: 85vh;
+    z-index: 50;
+    background: #fff;
+    border-radius: 5px;
+    box-shadow: 0 0 50px #000;
+    animation-name: PopUp;
+    animation-fill-mode: both;
+    animation-duration: 1s;
+    overflow: scroll;
+}
+.popUp .profile_info_container{
+    padding-top: 10px;
+}
+.profile_info_container .tilt img, .profile_info_container .player_information{
+    width: 95%;
+}
+/** PopUp **/
+
+@-webkit-keyframes PopUp {
+    0% {
+        opacity: 0;
+        -webkit-transform: scale(0);
+        -moz-transform: scale(0);
+        -ms-transform: scale(0);
+        -o-transform: scale(0);
+        transform: scale(0);
+    }
+
+    50% {
+        opacity: 1;
+        -webkit-transform: scale(1.1);
+        -moz-transform: scale(1.1);
+        -ms-transform: scale(1.1);
+        -o-transform: scale(1.1);
+        transform: scale(1.1);
+    }
+
+    100% {
+        opacity: 1;
+        -webkit-transform: scale(1);
+        -moz-transform: scale(1);
+        -ms-transform: scale(1);
+        -o-transform: scale(1);
+        transform: scale(1);
+    }
+}
+
+@-moz-keyframes PopUp {
+    0% {
+        opacity: 0;
+        -webkit-transform: scale(0);
+        -moz-transform: scale(0);
+        -ms-transform: scale(0);
+        -o-transform: scale(0);
+        transform: scale(0);
+    }
+
+    50% {
+        opacity: 1;
+        -webkit-transform: scale(1.1);
+        -moz-transform: scale(1.1);
+        -ms-transform: scale(1.1);
+        -o-transform: scale(1.1);
+        transform: scale(1.1);
+    }
+
+    100% {
+        opacity: 1;
+        -webkit-transform: scale(1);
+        -moz-transform: scale(1);
+        -ms-transform: scale(1);
+        -o-transform: scale(1);
+        transform: scale(1);
+    }
+}
+
+@keyframes PopUp {
+    0% {
+        opacity: 0;
+        -webkit-transform: scale(0);
+        -moz-transform: scale(0);
+        -ms-transform: scale(0);
+        -o-transform: scale(0);
+        transform: scale(0);
+    }
+
+    50% {
+        opacity: 1;
+        -webkit-transform: scale(1.1);
+        -moz-transform: scale(1.1);
+        -ms-transform: scale(1.1);
+        -o-transform: scale(1.1);
+        transform: scale(1.1);
+    }
+
+    100% {
+        opacity: 1;
+        -webkit-transform: scale(1);
+        -moz-transform: scale(1);
+        -ms-transform: scale(1);
+        -o-transform: scale(1);
+        transform: scale(1);
+    }
+}
+
+.pop-up {
+    -webkit-animation-name: PopUp;
+    -moz-animation-name: PopUp;
+    -o-animation-name: PopUp;
+    animation-name: PopUp;
+    -webkit-animation-fill-mode: both;
+    -moz-animation-fill-mode: both;
+    -o-animation-fill-mode: both;
+    animation-fill-mode: both;
+    -webkit-animation-duration: 1s;
+    -moz-animation-duration: 1s;
+    -o-animation-duration: 1s;
+    animation-duration: 1s;
+}
+
+.close {
+    position: fixed;
+    position: sticky;
+    top: 0%;
+    left: 96%;
+    transform: translate(-96%, -0%);
+    font-size: 30px;
+    color: #999;
+    font-weight: bold;
+    cursor: pointer;
+    transition: 300ms ease-in-out;
+}
+
+    .close:hover, .close:focus {
+        color: #000;
+        text-shadow: 3px 3px 5px #555;
+    }
+
 @media screen and (max-width: 850px) {
+    .gallery_container{
+        max-width: 95%;
+    }
     .gallery_container h2 {
         font-size: 25px;
     }
@@ -789,6 +962,54 @@ section {
 
 .member_information {
     padding: 2px 16px;
+}
+
+/* --- Membership Form --- */
+.membership_form {
+    max-width: 1000px;
+    width: 80%;
+}
+.membership_form div{
+    width: 100%;
+    text-align: left;
+}
+.membership_form .flex input{
+    width: 90%;
+}
+#paymentMethod{
+    min-width: 250px;
+}
+/* --- Inputs --- */
+.membership_form input, .membership_form textarea, .membership_form select {
+    border: 1px solid #333;
+    border-radius: 5px;
+    padding: 10px;
+    margin: 5px;
+    background: rgba(255,255,255,0.8);
+    font-family: 'Titillium Web', sans-serif;
+}
+.membership_form textarea{
+    width: 95%;
+}
+
+    .membership_form input:focus, .membership_form textarea:focus, .membership_form input:hover, .membership_form textarea:hover {
+        box-shadow: 0 0 5px #333;
+    }
+
+.membership_form .flex {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: inherit;
+    width: 100%;
+}
+@media screen and (max-width:500px) {
+    .membership_form .flex {
+        flex-direction: column;
+    }
+    .membership_form .flex input, .membership_form textarea {
+        width: 90%;
+    }
 }
 
 /* -- Footer -- */
@@ -866,6 +1087,7 @@ footer .footer_content .footer_logo {
     border-radius: 5px;
     white-space: nowrap;
     transition: 300ms ease-in-out;
+    text-decoration: none;
 }
 
 .paypal_button {
@@ -921,7 +1143,7 @@ footer .footer_content .footer_logo {
     }
 
 #no-more-tables {
-    margin: auto;
+    margin: 20px auto;
     max-width: 800px;
 }
 
