--- a/Pages/Membership.razor
+++ b/Pages/Membership.razor
@@ -42,13 +42,13 @@
         <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_self" id="playerMembership">
             <input type="hidden" name="cmd" value="_s-xclick">
             <input type="hidden" name="hosted_button_id" value="Z3J4KTXJ87W8N">
-            <input class="disabled button" type="submit" @onclick="@AddMember" value="Pay Now with Pay Pal" src="https://www.paypalobjects.com/en_US/i/btn/btn_paynowCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!" id="playerSubmitMembership">
+            <input class="disabled button" type="submit" @onclick="@AddMember" value="Pay Now with Pay Pal -- $100" src="https://www.paypalobjects.com/en_US/i/btn/btn_paynowCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!" id="playerSubmitMembership">
             <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
         </form>
         <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_self" id="generalMembership" style="display:none">
             <input type="hidden" name="cmd" value="_s-xclick">
             <input type="hidden" name="hosted_button_id" value="DDJJLNUMQWZUQ">
-            <input class="disabled button" type="submit" @onclick="@AddMember" value="Pay Now with Pay Pal" src="https://www.paypalobjects.com/en_US/i/btn/btn_paynowCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!" id="generalSubmitMembership">
+            <input class="disabled button" type="submit" @onclick="@AddMember" value="Pay Now with Pay Pal -- $25" src="https://www.paypalobjects.com/en_US/i/btn/btn_paynowCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!" id="generalSubmitMembership">
             <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
         </form>
     </div>
