Added some styles

--- a/Pages/AboutUs.razor
+++ b/Pages/AboutUs.razor
@@ -7,7 +7,7 @@
 </header>
 <section>
     <div class="wrapper center">
-        <h2 class="sub_heading">To be the Premier community cricket team in Canada.</h2>
+        <h2 class="section_heading">To be the Premier community cricket team in Canada.</h2>
     </div>
     <div class="blocks">
         <div class="wrapper container block">
