--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -5,9 +5,9 @@
 
 <header class="homepage_header">
     <div class="header_content">
-        <h2 class="heading">
+        <h2 class="big_heading">
             NEPALESE CANADIAN<br />
-            <span class="sub_heading">CRICKET CLUB</span>
+            <span class="heading">CRICKET CLUB</span>
         </h2>
         <br />
         <p>We welcome you all to join with us in this journey of togetherness.</p>
