--- a/Pages/Membership.razor
+++ b/Pages/Membership.razor
@@ -10,14 +10,14 @@
 </header>
 <section>
     <div class="wrapper center">
-        <h2 class="sub_heading">We currently offer following yearly membership plan:</h2>
-        <h2 class="sub_heading">Player Membership -- $100.00</h2>
-        <h2 class="sub_heading">General Membership -- $25.00</h2>
+        <h2 class="section_sub_heading">We currently offer following yearly membership plan:</h2>
+        <h2 class="section_sub_heading">Player Membership -- $100.00</h2>
+        <h2 class="section_sub_heading">General Membership -- $25.00</h2>
     </div>
     <br /><br /><br />
 
     <div class="membership_form wrapper" id="membership_form">
-        <h2 class="center">Get Membership</h2>
+        <h2 class="center section_heading">Get Membership</h2>
         <br /><br />
         <div class="flex center">
             <div><p class="no_wrap">Full Name* :</p><input type="text" @bind="memberName" id="fullname" placeholder="FullName" /></div>
