--- a/Pages/Sponsor.razor
+++ b/Pages/Sponsor.razor
@@ -7,7 +7,7 @@
 </header>
 <section>
     <div class="wrapper center">
-        <h2 class="sub_heading">A Big Thank You, For the enormous support.</h2>
+        <h2 class="section_heading">A Big Thank You<br />For the enormous support.</h2>
     </div>
     <div class="wrapper container">
         <h2 class="container_header container_main_header center">MAIN SPONSOR</h2>
