--- a/Pages/_Host.cshtml
+++ b/Pages/_Host.cshtml
@@ -15,9 +15,14 @@
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     @*<link href="css/site.css" rel="stylesheet" />*@
     @*<link rel="stylesheet" href="/css/all.min.css">*@
+
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/StyleSheet.css" />
-    
+
 </head>
 <body>
     <app>
