--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -13,7 +13,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="Membership">MEMBERSHIP</a>
+                    <a href="Membership">Membership</a>
                 </li>
                 @* --- Uncomment the below <li>...</li> block if a dropdown is needed --- *@
                 @*<li>
@@ -26,13 +26,13 @@
                         </div>
                     </li>*@
                 <li>
-                    <a href="Sponsor">SPONSORS</a>
+                    <a href="Sponsor">Sponsors</a>
                 </li>
                 <li>
-                    <a href="Players">Player</a>
+                    <a href="Players">Players</a>
                 </li>
                 <li>
-                    <a href="Board">BOARD</a>
+                    <a href="Board">Board</a>
                 </li>
                 <li>
                     <a href="AboutUs" id="contactLink">About Us</a>
