--- a/Pages/Board.razor
+++ b/Pages/Board.razor
@@ -16,7 +16,7 @@ else
     int i = 0;
     <section>
         <div class="wrapper center">
-            <h2 class="sub_heading">Board and Executive Members for the period of 2019-2021</h2>
+            <h2 class="section_heading">Board and Executive Members <br /> 2019-2021</h2>
         </div>
         <br />
         <br />
