--- a/wwwroot/css/StyleSheet.css
+++ b/wwwroot/css/StyleSheet.css
@@ -4,7 +4,7 @@
 }
 
 html, body {
-    font-family: 'Titillium Web', sans-serif;
+    font-family: 'Ubuntu', sans-serif;
     overflow-x: hidden;
     scroll-behavior: smooth;
     /* Adjust font size */
@@ -20,6 +20,9 @@ html, body {
     font-smooth: always;
     -webkit-font-smoothing: antialiased;
     text-shadow: rgba(0, 0, 0, .01) 0 0 1px;
+}
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'Lato', sans-serif;
 }
 
 /* This class will align the text at center */
@@ -77,11 +80,13 @@ html, body {
 /* Navigation Bar */
 nav {
     position: fixed;
-    background: rgba(255,255,255,0.95);
+    background: rgba(255,255,255,0.65);
     top: 0;
     height: 75px;
     width: 100%;
     z-index: 1;
+    padding: 3px 0;
+    backdrop-filter: blur(10px);
 }
 
 .navbar {
@@ -91,9 +96,13 @@ nav {
 }
 
 .nav_logo {
-    width: 90px;
+    width: 80px;
     height: auto;
-    padding: 3px 0 0 0;
+    padding: 8px 0 5px;
+    transition: filter 200ms ease-in-out;
+}
+.nav_logo:hover{
+    filter: drop-shadow(1px 1px 2px #000);
 }
 
 .mobile_logo {
@@ -117,7 +126,7 @@ nav {
         max-width: 270px;
         white-space: nowrap;
         font-weight: bold;
-        text-transform: uppercase;
+        text-transform: capitalize;
         cursor: pointer;
         color: #000;
         transition: all 300ms ease;
@@ -135,7 +144,7 @@ nav {
     margin: 0;
     background: transparent;
     outline: transparent;
-    font-family: 'Titillium Web', sans-serif;
+    font-family: 'Ubuntu', sans-serif;
 }
 
 .nav_links li a {
@@ -419,27 +428,27 @@ header {
 }
 
 .membership_header {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("/Static/Images/slider/slider-aboutus.jpg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("/Static/Images/slider/slider-aboutus.jpg");
 }
 
 .players_header {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("/Static/Images/slider/slider-players.jpg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("/Static/Images/slider/slider-players.jpg");
 }
 
 .playerProfile_header {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("/Static/Images/slider/slider1-1600x600.jpg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("/Static/Images/slider/slider1-1600x600.jpg");
 }
 
 .board_header {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("/Static/Images/slider/slider-board.jpg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("/Static/Images/slider/slider-board.jpg");
 }
 
 .sponsors_header {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("/Static/Images/slider/slider-sponsor.jpg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("/Static/Images/slider/slider-sponsor.jpg");
 }
 
 .aboutUs_header {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("/Static/Images/slider/slider-aboutus.jpg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("/Static/Images/slider/slider-aboutus.jpg");
 }
 
 .header_content {
@@ -452,14 +461,23 @@ header {
     transform: translate(-50%, -50%);
     font-size: 30px;
     line-height: 30px;
+    text-shadow: 2px 3px 2px #000;
+}
+.header_content p{
+    font-size: 23px;
 }
 
-.heading {
+.big_heading{
     font-size: 50px;
     line-height: 50px;
 }
+.heading {
+    font-size: 40px;
+    line-height: 40px;
+}
 
 .sub_heading {
+    font-size: 30px;
     font-weight: 400;
 }
 
@@ -508,7 +526,17 @@ header {
 }
 /* --- Section --- */
 section {
-    margin: 100px auto;
+    margin: 100px auto 150px;
+}
+.section_heading, section_sub_heading {
+    font-family: 'Lato', sans-serif;
+    font-size: 45px;
+    margin: 20px auto;
+    color: #333;
+    text-shadow: 1.5px 1.5px 1px #000;
+}
+.section_sub_heading{
+    font-size: 30px;
 }
 
 .blocks .block:nth-child(even) {
@@ -517,7 +545,6 @@ section {
 /* --- Container --- */
 .container {
     position: relative;
-    color: #424f67;
     margin: 100px auto;
 }
 
@@ -961,7 +988,7 @@ section {
     }
 
 .member_information {
-    padding: 2px 16px;
+    padding: 10px 16px 15px;
 }
 
 /* --- Membership Form --- */
@@ -986,7 +1013,7 @@ section {
     padding: 10px;
     margin: 5px;
     background: rgba(255,255,255,0.8);
-    font-family: 'Titillium Web', sans-serif;
+    font-family: 'Ubuntu', sans-serif;
 }
 .membership_form textarea{
     width: 95%;
@@ -1032,6 +1059,7 @@ footer li {
         font-weight: bold;
         color: #fff;
         text-decoration: none;
+        padding: 5px;
     }
 
 footer .footer_content div {
