change styles for navbar and headings

--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -55,7 +55,7 @@
         </div>
     </div>
     <div class="wrapper container center">
-        <h2>Most Valued Players</h2>
+        <h2 class="container_header">Most Valued Players</h2>
         <span class="slider_control_left fas fa-angle-left" id="slider_control_left"></span>
         <span class="slider_control_right fas fa-angle-right" id="slider_control_right"></span>
         <div class="player_container" id="image_container">
